GitVersion1/objects/Territory2.object
<CustomObject>
    <fields>
        <fullName>External_Territory_ID__c</fullName>
        <label>External Territory ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_CDH_Territory_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy CDH Territory Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DR-1Aug16- Hopefully this can be removed</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <externalId>true</externalId>
        <label>Region</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>